# blockvault-hari

./: .dockerignore  .gitignore  README.md  package-lock.json  package.json  render.yaml  tsconfig.base.json  vercel.json
apps/api/: pyproject.toml
apps/api/src/blockvault_api/: config.py  crypto.py  database.py  logging_utils.py  main.py  ocr.py  rate_limit.py  redaction_engine.py  redaction_jobs.py  repositories.py  schemas.py  security.py  storage.py  zkpt_artifacts.py  zkpt_benchmark.py  zkpt_bundle.py  zkpt_merkle.py  zkpt_onchain.py  zkpt_policy.py  zkpt_poseidon.py  zkpt_probe.py  zkpt_prover.py  zkpt_runtime.py  zkpt_witness.py
apps/api/src/blockvault_api/routes/: auth.py  cases.py  documents.py  files.py  health.py  redactions.py
apps/api/tests/: conftest.py  test_auth.py  test_document_workflow.py  test_health.py  test_logging.py  test_rate_limit.py  test_redaction_dispatch.py  test_redaction_engine.py  test_startup_contract.py  test_storage.py  test_upload_limits.py  test_vault_flow.py  test_zkpt_artifacts.py  test_zkpt_benchmark.py  test_zkpt_build_profile.py  test_zkpt_onchain.py  test_zkpt_policy.py  test_zkpt_probe.py  test_zkpt_prover.py  test_zkpt_runtime.py  test_zkpt_witness.py
apps/redactor-rs/: Cargo.toml
apps/redactor-rs/src/: main.rs
apps/worker/: pyproject.toml
apps/worker/src/blockvault_worker/: celery_app.py  main.py  tasks.py
blockvault-frontend/: Dockerfile  VERCEL_DEPLOYMENT.md  nginx.conf  package.json  tailwind.config.js  vercel.json
circuits/: README.md  package.json
contracts/: hardhat.config.js  package-lock.json  package.json
docs/: deploy-vercel-render.md  patent-boundary.md  product-spec.md  zkpt-latency-reduction.md  zkpt-source-recovery.md
infra/: README.md  api.Dockerfile  (+4 more)
(+126 files in other folders)
