[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockvault-api"
version = "0.1.0"
description = "FastAPI backend for the fresh BlockVault rebuild"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "gunicorn>=23,<24",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.3,<3",
  "boto3>=1.35,<2",
  "pymongo>=4.7,<5",
  "python-multipart>=0.0.9,<1",
  "eth-account>=0.13,<0.14",
  "cryptography>=43,<45",
  "pypdf>=5.0,<6",
  "pypdfium2>=5.6,<6",
  "rapidocr_onnxruntime>=1.4,<2",
  "reportlab>=4.2,<5",
  "celery>=5.4,<6",
  "redis>=5.0,<6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "httpx>=0.27,<1",
  "mongomock>=4.1,<5"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
