[package]
name = "blockvault-redactor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
pdf-extract = "0.7"
printpdf = { version = "0.7", features = ["embedded_images"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
